fix  request crash

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "xml-object-stream": "~0.2.0",
     "underscore": "~1.4.4",
     "request-json": "~0.3.6",
-    "restler": "~2.0.1"
+    "restler": "git://github.com/eric-wieser/restler.git#8a2ca18a8e942cd8dd85046bf7bb1a0ddf4cc1f9"
   }
 }
