--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "express": "3.2.0",
     "then-jade": "1.1.0",
     "geolib": "~1.2.5",
-    "xml-object-stream": "~0.2.0",
     "underscore": "~1.4.4",
-    "request-json": "~0.3.6",
-    "restler": "git://github.com/eric-wieser/restler.git#8a2ca18a8e942cd8dd85046bf7bb1a0ddf4cc1f9"
+    "restler": "git://github.com/eric-wieser/restler.git#8a2ca18a8e942cd8dd85046bf7bb1a0ddf4cc1f9",
+    "libxmljs": "~0.8.1"
   }
 }
